objects/tFlow__Route_Attributes__c.object
<CustomObject>
    <fields>
        <fullName>tFlow__Key__c</fullName>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tFlow__Route__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Route</label>
        <referenceTo>tFlow__Route__c</referenceTo>
        <relationshipLabel>Route Attributes</relationshipLabel>
        <relationshipName>Route_Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tFlow__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Route Attributes</label>
    <listViews>
        <fullName>tFlow__All</fullName>
        <columns>NAME</columns>
        <columns>tFlow__Key__c</columns>
        <columns>tFlow__Route__c</columns>
        <columns>tFlow__Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Route Attributes Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Route Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>